Information om 2021 - att man ska kontakta respektive marknadsarrangör.

--- a/style.css
+++ b/style.css
@@ -1691,7 +1691,7 @@ a {
     -o-transition: all .7s ease-in-out;
     -ms-transition: all .7s ease-in-out;
     transition: all .7s ease-in-out;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .tp-caption.WebProduct-Title,
